# MemBench

./: .gitignore  LICENSE.md  README.md  pyproject.toml
configs/: claude_code.toml  claude_code_qwen.toml  claude_code_qwen_pectra.toml  example.toml  opencode.json  opencode_qwen_pectra.toml  pectra.toml
dataset/cross_session/: carry_forward.jsonl  instances.jsonl  memory_need_labels.jsonl  oracle_files.json  oracle_patches.json  sequences.jsonl
dataset/examples/: instances.jsonl
docs/: NAMING.md  agent_memory_survey_and_membench_design.md  benchmark_env_setup.md  implementation.md  memory_plugins_comparison.md
docs/paper/: membench.tex
membench/: __init__.py  agent.py  claude_code.py  cli.py  config.py  evaluate.py  jsonl.py  models.py  opencode.py  runner.py  schema.py  token_count.py  workspace.py
membench/memory/: __init__.py  base.py  claude_mem.py  graphify.py  graphiti_adapter.py  mem0_adapter.py  none.py  oracle.py  raw_rag.py  scoring.py  structured.py
scripts/: _gold.py  _run_oc_seed1_parallel.sh  _run_seed1_parallel.sh  _run_sysprompt_seed1.sh  adjusted_results.py  analyze_cross_session.py  build_cross_session_dataset.py  build_oracle_files.py  build_swebench_live_full.py  build_swebench_live_subset.py  cap_read_hook.sh  compute_carry_forward.py  evaluate_cross_session.py  finish_and_score.sh  launch_seed_matrix.sh  memorization_probe.py  memory_need_labels.py  requeue_errored.py  run_cross_session.py  run_full_benchmark.py  run_ladder.py  run_swb_arms.sh  score_swb_arms.sh
tests/: test_smoke.py
(+30 files in other folders)
