[project]
name = "membench"
version = "0.1.0"
description = "A reproducible benchmark scaffold for testing memory systems in coding agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "graphiti-core[falkordb,kuzu]>=0.29.2",
    "mem0ai>=2.0.11",
    "pytest>=9.1.1",
    "sentence-transformers>=5.6.0",
]

[project.scripts]
membench = "membench.cli:main"

[tool.uv]
package = false
